// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableBody > Style tests > should render with default styles 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-1 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0"
  >
    <td
      class="circuit-1"
    >
      Foo
    </td>
    <td
      class="circuit-1"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody > Style tests > should render with fixed header styles 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-1 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

@media (max-width: 767px) {
  .circuit-1 {
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    width: 145px;
    overflow-wrap: break-word;
    z-index: 1;
  }

  .circuit-1:after {
    content: '';
    background: linear-gradient(
              90deg,
              rgba(0, 0, 0, 0.12),
              rgba(255, 255, 255, 0)
            );
    height: 100%;
    position: absolute;
    top: 0;
    left: 100%;
    width: 6px;
  }
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0"
  >
    <th
      class="circuit-1"
      scope="row"
    >
      Foo
    </th>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody > logic tests > sortHover > should not render a cell with hovered styles if its column is not currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-1 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0"
  >
    <td
      class="circuit-1"
    >
      Foo
    </td>
    <td
      class="circuit-1"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody > logic tests > sortHover > should render a cell with hovered styles if its column is currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-1 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-0"
  >
    <td
      class="circuit-1"
    >
      Foo
    </td>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;
